Fix up some style/html inconsistencies
- Use new FAQ formatting (light-mode compatible) on XRPL Overview
  mini-faq
- Unify chip styles
- Fix homepage "In Development" chips getting cut off
- Update style dependencies (node-sass 6.0.1, Bootstrap 4.6.0, etc.)

--- a/styles/_pages.scss
+++ b/styles/_pages.scss
@@ -349,6 +349,11 @@
     text-align: center;
     font-weight: 700;
   }
+}
+
+.page-faq,
+.mini-faq {
+  // Includes mini-FAQ used on XRPL overview page
 
   .q-wrapper {
     background: $gray-800;
